Use testscript to handle hard-coded file paths

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@
 !*/
 
 !upstream*
-!libtinyexr-tests/openexr-images
-!libtinyexr-tests/unit/regression
-!*.exr
+!libtinyexr-tests/data/openexr-images
+!libtinyexr-tests/data/regression
+!asakusa.exr
 
 !*.h
 !*.c
