Remove '日本語.exr' completely
See: https://github.com/build2/build2/issues/307

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 
 !upstream*
 !libtinyexr-tests/data/openexr-images
-!libtinyexr-tests/data/regression
+!libtinyexr-tests/data/regression/**
 !asakusa.exr
 
 !*.h
